# media-streamer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: common_interface.cmake  compiler_warnings.cmake
cmake/modules/: FindLibav.cmake
dependencies/: CMakeLists.txt
media-streamer/: CMakeLists.txt
media-streamer/http/: CMakeLists.txt  server.cpp  server.hpp  session.cpp  session.hpp  utils.hpp
media-streamer/ms/application/: CMakeLists.txt  main.cpp
media-streamer/ms/av/: CMakeLists.txt  codec_context.cpp  codec_context.hpp  error.hpp  format_context.cpp  format_context.hpp  frame.cpp  frame.hpp  image.cpp  image.hpp  packet.cpp  packet.hpp
media-streamer/ms/common/: CMakeLists.txt  buffer.hpp  immobile.hpp  utils.hpp
media-streamer/ms/decoder/: CMakeLists.txt  decoder.cpp  decoder.hpp  frame_acceptor.hpp  packet_provider.hpp
media-streamer/ms/examples/: CMakeLists.txt  http_client.cpp  http_server.cpp
media-streamer/ms/examples/http-client/: CMakeLists.txt  main.cpp
media-streamer/ms/examples/http-server/: CMakeLists.txt  main.cpp
media-streamer/ms/framework/: CMakeLists.txt
media-streamer/ms/framework/data/: CMakeLists.txt  buffer.cpp  buffer.hpp  decoder.cpp  decoder.hpp  decoder_events_handler.hpp  object.cpp  object.hpp  packet_provider.hpp
media-streamer/ms/framework/media/: CMakeLists.txt  buffer.cpp  buffer.hpp  object.cpp  object.hpp
media-streamer/ms/framework/mpd/: CMakeLists.txt  abstract_representation_stream.cpp  abstract_representation_stream.hpp  adaptation_set_stream.cpp  adaptation_set_stream.hpp  representation_stream.hpp  representation_stream_factory.cpp  representation_stream_factory.hpp  segment_list_stream.cpp  segment_list_stream.hpp  segment_template_stream.cpp  segment_template_stream.hpp  single_media_segment_stream.cpp  single_media_segment_stream.hpp  time_utils.cpp  time_utils.hpp
media-streamer/ms/framework/stream/: CMakeLists.txt  manager.cpp  manager.hpp  receiver.cpp  receiver.hpp
media-streamer/ms/http/: CMakeLists.txt  client.cpp  client.hpp  common.hpp  server.cpp  server.hpp  session.cpp  session.hpp
media-streamer/ms/media/: CMakeLists.txt  decoder.cpp  decoder.hpp  frame_acceptor.hpp  manager.cpp  manager.hpp
media-streamer/ms/mpd/: CMakeLists.txt  abstract_representation_stream.cpp  abstract_representation_stream.hpp  adaptation_set_stream.cpp  adaptation_set_stream.hpp  representation_stream.hpp  time_utils.cpp  time_utils.hpp
media-streamer/ms/multimedia/: CMakeLists.txt  audio_player.hpp  manager.cpp  manager.hpp  stream.cpp  stream.hpp  video_renderer.hpp
media-streamer/ms/presentation/: CMakeLists.txt  frame_renderer.hpp  manager.cpp  manager.hpp
media-streamer/ms/qt/: CMakeLists.txt  audio_player.cpp  audio_player.hpp  gl_renderer.cpp  gl_renderer.hpp  mainwindow.ui  player.cpp  player.hpp  qt_player.ui
media-streamer/ms/utils/: CMakeLists.txt  decoder.cpp  decoder.hpp  frame_acceptor.hpp
